[package]
name = "miden-fmt"
version = "0.17.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A formatter for Miden Assembly (.masm) files"
keywords = ["miden", "zkVM", "assembly", "masm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
glob = "0.3"
clap = { version = "4.1", features = ["derive"] }
regex = "1"
once_cell = "1.20.3"
tempfile = "3.17.1"

[[bin]]
name = "miden-fmt"
path = "src/main.rs"