[package]
name = "miden-vm"
version.workspace = true
description = "Miden virtual machine"
documentation = "https://docs.rs/miden-vm"
readme = "README.md"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "stark", "virtual-machine", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "miden-vm"
path = "src/main.rs"
bench = false
doctest = false
required-features = ["executable"]

[lib]
path = "src/lib.rs"
bench = false
doctest = false

[[bench]]
name = "build_trace"
required-features = ["internal"]
harness = false

[[bench]]
name = "program_execution_for_trace"
required-features = ["internal"]
harness = false

[[bench]]
name = "program_execution_fast"
required-features = ["internal"]
harness = false

[[bench]]
name = "deserialize_core_lib"
harness = false

[[test]]
name = "miden-cli"
path = "tests/integration/main.rs"

[features]
concurrent = ["miden-prover/concurrent", "std"]
default = ["std"]
executable = ["dep:hex", "dep:clap", "dep:tracing-subscriber", "internal", "serde", "std"]
serde = ["dep:serde", "dep:serde_json"]
std = [
    "hex?/std",
    "miden-assembly/std",
    "miden-debug-types/std",
    "miden-processor/std",
    "miden-prover/std",
    "miden-verifier/std",
    "serde?/std",
    "serde_json?/std",
]
# For internal use, not meant to be used by users
internal = ["dep:hex", "serde", "std"]

[dependencies]
# Miden dependencies
miden-assembly.workspace = true
miden-core.workspace = true
miden-crypto.workspace = true
miden-debug-types.workspace = true
miden-processor.workspace = true
miden-prover.workspace = true
miden-mast-package.workspace = true
miden-core-lib.workspace = true
miden-verifier.workspace = true

# External dependencies
clap = { workspace = true, features = ["derive"], optional = true }
hex = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["std", "env-filter"], optional = true }
tracing-forest = { workspace = true, features = ["ansi", "smallvec"], optional = true }

[dev-dependencies]
assert_cmd = { workspace = true }
bincode = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
escargot = { workspace = true }
miden-processor = { workspace = true, features = ["testing"] }
miden-utils-testing.workspace = true
num-bigint = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
rand_chacha = { workspace = true }
walkdir = { workspace = true }
