[package]
name = "miden-precompiles-prover"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[features]
default = ["std"]
concurrent = [
    "std",
    "miden-air/concurrent",
    "miden-crypto/concurrent",
    "miden-lifted-stark/concurrent",
]
std = [
    "miden-air/std",
    "miden-core/std",
    "miden-crypto/std",
    "miden-precompiles/std",
    "ruint/std",
    "thiserror/std",
]

[dependencies]
itertools.workspace = true
miden-air.workspace = true
miden-core.workspace = true
miden-crypto.workspace = true
miden-precompiles.workspace = true
miden-lifted-air = { version = "0.28", default-features = false }
miden-lifted-stark = { version = "0.28", default-features = false }
p3-air = { version = "0.6.1", default-features = false }
p3-matrix = { version = "0.6.1", default-features = false }
ruint = { version = "1.18", default-features = false }
serde.workspace = true
serde-wincode.workspace = true
thiserror.workspace = true
wincode.workspace = true

[dev-dependencies]
# Known-good secp256k1 ("k1") reference — the oracle for EC circuit
# cross-validation tests (RustCrypto, pure Rust, no C deps).
k256 = "0.13"
miden-air = { workspace = true, features = ["std"] }
p3-field = { version = "0.6.1", default-features = false }
rand = "0.9"
# Prover span profiling (`PROFILE=1` on the benches) — research only.
tracing.workspace = true
tracing-subscriber = "0.3"
