[package]
name = "miden-precompiles"
version.workspace = true
description = "Concrete precompile implementations for the Miden VM deferred framework"
documentation = "https://docs.rs/miden-precompiles"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["miden", "precompile", "deferred", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["miden-core/std", "miden-crypto/std"]

[dependencies]
# Miden dependencies
miden-core.workspace = true
miden-crypto.workspace = true

[dev-dependencies]
codspeed-criterion-compat.workspace = true
miden-core-lib.workspace = true
miden-vm = { path = "../miden-vm", features = ["internal", "concurrent"] }
rand_chacha.workspace = true

[[bench]]
name = "precompiles_bench"
harness = false
