[package]
name = "miden-processor"
version.workspace = true
description = "Miden VM processor"
documentation = "https://docs.rs/miden-processor"
readme = "README.md"
categories = ["emulators", "no-std"]
keywords = ["miden", "virtual-machine"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
exclude = ["*.snap"]

[lib]
bench = false
doctest = false

[features]
concurrent = ["std", "miden-air/concurrent"]
default = ["std"]
std = [
    "miden-core/std",
    "miden-debug-types/std",
    "miden-utils-diagnostics/std",
    "thiserror/std",
]
testing = ["miden-air/testing"]
# Enables the LogUp bus-debugger surface. Compiles the debug oracles in miden-air (which
# live under `#[cfg(feature = "std")]`) and activates bus-check assertions in processor
# tests. Slows down the processor considerably.
bus-debugger = ["miden-air/std"]

[dependencies]
# Miden dependencies
miden-air.workspace = true
miden-core.workspace = true
miden-debug-types.workspace = true
miden-utils-diagnostics.workspace = true
miden-utils-indexing.workspace = true

# External dependencies
itertools.workspace = true
paste.workspace = true
rayon = { version = "1.10", default-features = false }
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
miden-assembly = { workspace = true, features = ["testing"] }
miden-utils-testing.workspace = true
insta.workspace = true
pretty_assertions = { workspace = true, features = ["std"] }
proptest.workspace = true
rstest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
