[package]
name = "miden-prover"
version.workspace = true
description = "Miden VM prover"
documentation = "https://docs.rs/miden-prover"
readme = "README.md"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "prover", "stark", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
default = ["std"]
concurrent = ["std", "miden-processor/concurrent"]
std = [
  "miden-air/std",
  "miden-debug-types/std",
  "miden-processor/std",
]

[dependencies]
# Miden dependencies
miden-air.workspace = true
miden-debug-types.workspace = true
miden-processor.workspace = true
miden-crypto.workspace = true

# External dependencies
tracing.workspace = true
rand.workspace = true
getrandom.workspace = true

# Plonky3 dependencies
p3-air.workspace = true
p3-blake3.workspace = true
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft = { workspace = true, features = ["parallel"] }
p3-field.workspace = true
p3-fri.workspace = true
p3-goldilocks.workspace = true
p3-interpolation.workspace = true
p3-keccak.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-merkle-tree.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true
p3-uni-stark = { workspace = true, features = ["parallel"] }
p3-util = { workspace = true, features = ["parallel"] }

# Miden-specific Plonky3 crates
miden-air-trait.workspace = true
miden-prover-p3.workspace = true

# Serialization
serde.workspace = true
bincode = "1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }

[dev-dependencies]
miden-assembly.workspace = true
miden-core.workspace = true
miden-verifier.workspace = true
miden-vm = { path = "../miden-vm", version = "0.19", default-features = false }
