[package]
name = "miden-prover"
version.workspace = true
description = "Miden VM prover"
documentation = "https://docs.rs/miden-prover"
readme = "README.md"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "prover", "stark", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
default = ["std"]
concurrent = ["std", "miden-processor/concurrent", "p3-maybe-rayon/parallel"]
std = [
  "miden-air/std",
  "miden-debug-types/std",
  "miden-processor/std",
]

[dependencies]
# Miden dependencies
miden-air.workspace = true
miden-debug-types.workspace = true
miden-processor.workspace = true
miden-crypto.workspace = true

# External dependencies
tracing.workspace = true
rand.workspace = true
getrandom.workspace = true

# Plonky3 dependencies
p3-dft = { workspace = true, features = ["parallel"] }
p3-miden-fri.workspace = true
p3-interpolation.workspace = true
p3-keccak.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-merkle-tree.workspace = true
p3-util = { workspace = true, features = ["parallel"] }

# Serialization
serde.workspace = true
bincode = "1.3"

# Platform-specific tokio dependencies
# On non-wasm targets, enable rt-multi-thread for better performance
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

# On wasm32, only basic tokio features are supported
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
miden-assembly.workspace = true
miden-core.workspace = true
miden-processor = { workspace = true, features = ["testing"] }
miden-verifier.workspace = true
miden-vm = { path = "../miden-vm", version = "0.21", default-features = false }
