[package]
name = "miden-prover"
version.workspace = true
description = "Miden VM prover"
documentation = "https://docs.rs/miden-prover"
readme = "README.md"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "prover", "stark", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
default = ["std"]
concurrent = ["std", "miden-air/concurrent", "miden-crypto/concurrent", "miden-processor/concurrent"]
std = ["miden-air/std", "miden-debug-types/std", "miden-processor/std"]

[dependencies]
# Miden dependencies
miden-air.workspace = true
miden-core.workspace = true
miden-debug-types.workspace = true
miden-processor.workspace = true
miden-crypto.workspace = true

# External dependencies
bincode.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
miden-assembly.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
