[package]
name = "miden-verifier"
version.workspace = true
description = "Miden VM execution verifier"
documentation = "https://docs.rs/miden-verifier"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["miden", "stark", "verifier", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = [
  "miden-air/std",
  "miden-core/std",
  "thiserror/std",
]

[dependencies]
# Miden dependencies
miden-air.workspace = true
miden-core.workspace = true
p3-miden-prover.workspace = true

# External dependencies
tracing.workspace = true
thiserror.workspace = true
itertools = "0.12"
bincode = "1.3"

# Plonky3 dependencies
p3-air.workspace = true
p3-blake3.workspace = true
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-miden-fri.workspace = true
p3-miden-goldilocks.workspace = true
p3-keccak.workspace = true
p3-matrix.workspace = true
p3-merkle-tree.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true
p3-uni-stark.workspace = true
p3-util.workspace = true

# Miden-specific Plonky3 crates
p3-miden-air.workspace = true

# Serialization
serde.workspace = true
