[package]
name = "miden-verifier"
version = "0.25.3"
description = "Miden VM execution verifier"
documentation = "https://docs.rs/miden-verifier"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["miden", "stark", "verifier", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["miden-air/std", "miden-core/std", "thiserror/std"]

[dependencies]
# Miden dependencies
miden-air.workspace = true
miden-core.workspace = true
miden-crypto.workspace = true

# External dependencies
serde.workspace = true
serde-wincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
wincode.workspace = true
