[package]
name = "miden-vm-precompiles-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dev-dependencies]
codspeed-criterion-compat = { workspace = true }
miden-core = { workspace = true }
miden-core-lib = { workspace = true }
miden-crypto = { workspace = true }
miden-vm = { path = "../../miden-vm", features = ["internal", "concurrent"] }
rand_chacha = { workspace = true }

[[bench]]
name = "precompiles_bench"
path = "../../precompiles/benches/precompiles_bench.rs"
harness = false
