[package]
authors.workspace      = true
description            = "CodSpeed benchmarks for Miden crypto SMT operations."
edition.workspace      = true
license.workspace      = true
name                   = "miden-crypto-smt-codspeed-bench"
publish                = false
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dev-dependencies]
codspeed-criterion-compat = { workspace = true }
miden-crypto = { default-features = false, features = ["rocksdb"], workspace = true }
tempfile     = { workspace = true }

[lib]
doctest = false
test    = false

[[bench]]
harness = false
name    = "smt_codspeed"

[lints]
workspace = true
