[package]
name = "miden-vm-synthetic-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
miden-air       = { workspace = true }
miden-processor = { workspace = true, features = ["concurrent"] }
miden-vm        = { path = "../../miden-vm", features = ["concurrent"] }
serde           = { workspace = true, features = ["std"] }
serde_json      = { workspace = true, features = ["std"] }
thiserror       = { workspace = true, features = ["std"] }

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "4.6.0" }
miden-core = { workspace = true, features = ["std"] }
miden-core-lib = { workspace = true, features = ["std"] }
miden-prover = { workspace = true, features = ["std"] }
miden-utils-testing = { workspace = true }

[[bench]]
name = "synthetic_bench"
harness = false

[[bench]]
name = "recursive_verify"
harness = false
