[package]
name = "miden-vm-synthetic-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
miden-processor = { workspace = true, features = ["concurrent"] }
miden-vm        = { path = "../../miden-vm", features = ["concurrent"] }
serde           = { workspace = true, features = ["std"] }
serde_json      = { workspace = true, features = ["std"] }
thiserror       = { workspace = true, features = ["std"] }

[dev-dependencies]
codspeed-criterion-compat = { workspace = true }
miden-assembly = { workspace = true, features = ["std"] }
miden-core = { workspace = true, features = ["std"] }
miden-core-lib = { workspace = true, features = ["std"] }
miden-prover = { workspace = true, features = ["concurrent"] }
miden-utils-testing = { workspace = true, features = ["std"] }
tracing = "0.1"
tracing-forest = { version = "0.2", features = ["ansi", "smallvec"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "synthetic_bench"
harness = false

[[bench]]
name = "recursive_verify"
harness = false

[features]
# Install miden-prover's huge-page global allocator in the bench binaries.
huge-alloc = []
