[package]
name = "miden-ace-codegen"
version = "0.21.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xMiden/miden-vm"


[dependencies]
miden-core = { workspace = true }
miden-crypto = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
miden-air = { workspace = true, features = ["std"] }
miden-core = { workspace = true, features = ["std"] }
