[package]
name = "miden-ace-codegen"
version.workspace = true
description = "ACE circuit codegen for Plonky3-based Miden AIRs."
documentation = "https://docs.rs/miden-ace-codegen"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["air", "arithmetization", "crypto", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
miden-core = { workspace = true }
miden-crypto = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
miden-air = { workspace = true, features = ["std"] }
miden-core = { workspace = true, features = ["std"] }
