[package]
name = "miden-assembly-syntax-cst"
version = "0.25.3"
description = "Lossless concrete syntax tree support for the Miden Assembly language"
documentation = "https://docs.rs/miden-assembly-syntax-cst"
readme = "README.md"
categories = ["compilers"]
keywords = ["assembly", "cst", "syntax", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["miden-debug-types/std", "miden-utils-diagnostics/std", "rowan/std", "thiserror/std"]

[dependencies]
miden-debug-types.workspace = true
miden-utils-diagnostics.workspace = true
thiserror.workspace = true
rowan = { package = "miden-rowan", version = "0.16", default-features = false }

[dev-dependencies]
pretty_assertions = { workspace = true, features = ["alloc"] }
